@@ -3,6 +3,7 @@
 namespace meteocontrol\vcomapi\model;
 
 use DateTime;
+use DateTimeInterface;
 
 class CmmsAssignee extends BaseModel {
 
@@ -36,11 +37,11 @@ class CmmsAssignee extends BaseModel {
     }
 
     /**
-     * @param DateTime $dateTime
+     * @param DateTimeInterface $dateTime
      * @param null|string $key
      * @return string
      */
-    protected function serializeDateTime(DateTime $dateTime, $key = null): string {
+    protected function serializeDateTime(DateTimeInterface $dateTime, $key = null): string {
         if ($key === 'statusDateAt') {
             return $dateTime->format(DATE_ATOM);
         }
