@@ -3,6 +3,7 @@
 namespace meteocontrol\vcomapi\model;
 
 use DateTime;
+use DateTimeInterface;
 
 class CmmsSystem extends BaseModel {
 
@@ -39,11 +40,11 @@ class CmmsSystem extends BaseModel {
     }
 
     /**
-     * @param DateTime $dateTime
+     * @param DateTimeInterface $dateTime
      * @param null|string $key
      * @return string
      */
-    protected function serializeDateTime(DateTime $dateTime, $key = null): string {
+    protected function serializeDateTime(DateTimeInterface $dateTime, $key = null): string {
         if (in_array($key, ['activeUntil', 'activeSince'])) {
             return $dateTime->format('Y-m-d');
         }
