@@ -2,6 +2,7 @@
 namespace meteocontrol\vcomapi\model;
 
 use DateTime;
+use DateTimeInterface;
 
 class VirtualMeterDetail extends BaseModel {
 
@@ -35,11 +36,11 @@ class VirtualMeterDetail extends BaseModel {
     }
 
     /**
-     * @param DateTime $dateTime
+     * @param DateTimeInterface $dateTime
      * @param null|string $key
      * @return string
      */
-    protected function serializeDateTime(DateTime $dateTime, $key = null): string {
+    protected function serializeDateTime(DateTimeInterface $dateTime, $key = null): string {
         return $dateTime->format('Y-m-d');
     }
 
