@@ -29,3 +29,4 @@
 2021-06-02: Declare return type
 2022-01-13: Add cause property for ticket and ability to manipulate ticket cause
 2022-02-23: Add forecast endpoint
+2022-04-20: Add ability to manipulate ticket fieldService property
